[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Ship.gd" type="Script" id=1]
[ext_resource path="res://Assets/2boat2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Font_Roboto_Light.tres" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 388, 84 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 70
outline_size = 2
font_data = ExtResource( 3 )

[node name="Ship" type="Node2D" groups=["gridship"]]
script = ExtResource( 1 )

[node name="StartPoint" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 64, 0 )
scale = Vector2( 1, 0.583333 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="Sprite" groups=["ship"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="Sprite"]
margin_left = -56.0
margin_top = -13.7143
margin_right = 50.0
margin_bottom = 13.2857
custom_fonts/font = SubResource( 3 )
text = "Ship Name"

[connection signal="area_entered" from="Sprite/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Sprite/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="input_event" from="Sprite/Area2D" to="." method="_on_Area2D_input_event"]
